[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Questions_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/odin-rounded.light.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Fonts/komika.hand.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Buttons/Menu_button.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/Buttons/Menu_button_pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://Assets/Buttons/Menu_button_hover.tres" type="StyleBox" id=7]
[ext_resource path="res://Assets/Fonts/JuanMikes.otf" type="DynamicFontData" id=8]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0705882, 0.760784, 0.819608, 1 )
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color( 0.0784314, 0.415686, 0.6, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=11]
size = 50
outline_size = 2
outline_color = Color( 0.0627451, 0.639216, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=12]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 45
outline_size = 2
outline_color = Color( 0.682353, 0.439216, 0.0666667, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0745098, 0.494118, 0.764706, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.054902, 0.235294, 0.45098, 1 )
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="DynamicFont" id=6]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
size = 25
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=2]
resource_name = "Enter_question"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Questions:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -1280, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Questions:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=3]
resource_name = "Exit_question"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Questions:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Questions:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -720, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 2 )
}

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
margin_left = -1061.0
margin_right = 2338.0
margin_bottom = 720.0
color = Color( 0.0313726, 0.301961, 0.501961, 1 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true

[node name="End_Screen" type="Panel" parent="."]
visible = false
margin_left = 304.0
margin_top = 89.0
margin_right = 963.0
margin_bottom = 548.0
custom_styles/panel = SubResource( 4 )

[node name="Title" type="Label" parent="End_Screen"]
margin_right = 659.0
margin_bottom = 164.0
custom_colors/font_color = Color( 0.0470588, 0.976471, 0.278431, 1 )
custom_fonts/font = SubResource( 11 )
text = "A tua pontuação: ##"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="End_Screen"]
margin_left = 61.0
margin_top = 200.0
margin_right = 599.0
margin_bottom = 306.0
custom_fonts/font = ExtResource( 2 )
custom_styles/read_only = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
placeholder_text = "O teu nome aqui"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name_error" type="Label" parent="End_Screen"]
visible = false
margin_left = 22.0
margin_top = 159.0
margin_right = 642.0
margin_bottom = 194.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Erro"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm_button" type="Button" parent="End_Screen"]
margin_left = 173.0
margin_top = 324.0
margin_right = 488.0
margin_bottom = 424.0
custom_colors/font_color_disabled = Color( 0.929412, 0.65098, 0.12549, 1 )
custom_colors/font_color_focus = Color( 0.929412, 0.65098, 0.12549, 1 )
custom_colors/font_color = Color( 0.929412, 0.65098, 0.12549, 1 )
custom_colors/font_color_hover = Color( 0.929412, 0.65098, 0.12549, 1 )
custom_colors/font_color_pressed = Color( 0.929412, 0.65098, 0.12549, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "Confirmar"

[node name="Questions" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="Time" type="Panel" parent="."]
margin_left = 1090.0
margin_top = 50.0
margin_right = 1220.0
margin_bottom = 180.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Time"]
margin_right = 130.0
margin_bottom = 130.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Panel" parent="."]
margin_left = 60.0
margin_top = 50.0
margin_right = 190.0
margin_bottom = 180.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Text" type="Label" parent="Score"]
margin_right = 130.0
margin_bottom = 130.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "Pontos: 00"
align = 1
valign = 1

[node name="Rounds" type="Panel" parent="."]
margin_left = 60.0
margin_top = 540.0
margin_right = 190.0
margin_bottom = 670.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Text" type="Label" parent="Rounds"]
margin_right = 130.0
margin_bottom = 130.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 7 )
text = "Perguntas: 00/00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Enter_question = SubResource( 2 )
anims/Exit_question = SubResource( 3 )

[connection signal="pressed" from="End_Screen/Confirm_button" to="." method="_on_Confirm_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
